# heartrate-server

./: .gitignore  CMakeLists.txt  LICENSE
src/: ArduinoSerial.cpp  ArduinoSerial.h  ConnectionManager.cpp  ConnectionManager.h  SignalProcessor-Auxillary.cpp  SignalProcessor.cpp  SignalProcessor.h  main.cpp  smmServer.cpp
src/arduino/: Button.h  SerialController.hpp  arduino.ino
